# tauri-yt-dlp

./: .eslintignore  .eslintrc.cjs  .gitignore  ICONS.md  LICENSE  README.MD  SIGNING_SETUP.md  components.json  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.cursor/rules/: rust.mdc  svelte.mdc  tauri.mdc
.github/workflows/: build.yml
scripts/: download-ytdlp.ps1  download-ytdlp.sh  filter-resources.ps1  filter-resources.sh
src/: app.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  updater.rs  ytdlp_manager.rs
src/lib/components/: Button.svelte  ColoredLog.svelte  SettingsSidebar.svelte  StatusMessage.svelte
src/lib/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte  index.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/input/: index.ts  input.svelte
src/lib/components/ui/select/: index.ts  select-content.svelte  select-group-heading.svelte  select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-separator.svelte  select-trigger.svelte
src/lib/components/ui/separator/: index.ts  separator.svelte
src/lib/components/ui/sheet/: index.ts  sheet-content.svelte  sheet-description.svelte  sheet-header.svelte  sheet-overlay.svelte  (+1 more)
src/lib/stores/: appStore.ts  downloadStore.ts  settingsStore.ts  videoStore.ts
src/lib/types/: index.ts  status.ts
src/lib/utils/: ansi.ts  tauri.ts  validation.ts
src/routes/: +layout.svelte  +page.svelte
